media/templates/radarr/radarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "ca-issuer"
    cert-manager.io/common-name: "radarr.raspberrypi"
  name: "radarr-ingress"
spec:
  tls:
  - hosts:
    - radarr.raspberrypi
    secretName: radarr-auto-certificate-key-pair
  rules:
  - host: radarr.raspberrypi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              name: http
